<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D2CFCFCF"
    android:layout_gravity="center"
    tools:context=".activity.SignUpActivity">


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:layout_marginTop="10dp"
        android:layout_height="250dp"
        app:srcCompat="@drawable/conversation"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:fontFamily="@font/gilroy_bold"
        android:layout_marginStart="10dp"
        android:text="@string/sign_up" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_name"
        android:background="@drawable/shape_khung"
        android:inputType="text"
        android:fontFamily="@font/gilroy_light"
        android:padding="12dp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:hint="Enter Email"
        android:background="@drawable/shape_khung"
        android:inputType="text"
        android:fontFamily="@font/gilroy_light"
        android:padding="12dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_password"
        android:background="@drawable/shape_khung"
        android:inputType="text"
        android:fontFamily="@font/gilroy_light"
        android:padding="12dp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_confirm_password"
        android:background="@drawable/shape_khung"
        android:inputType="text"
        android:fontFamily="@font/gilroy_light"
        android:padding="12dp"
        tools:ignore="TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="#464646"
            android:layout_margin="20dp"
            android:layout_marginEnd="2dp"
            android:textColor="#FFFFFF"
            android:text="@string/signup"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#464646"
            android:textColor="#FFFFFF"
            android:text="@string/login"/>

    </LinearLayout>





</LinearLayout>